fix component overflow not scrolling

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,3 +3,20 @@
 .ng-input > input {
     color: black;
 }
+
+// Flex fill every element the router outlet generates
+router-outlet + * {
+    flex: 1 1 auto;
+    position: absolute;
+    top: 56px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+}
